<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/chat_room_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".chatroom.ChatRoomActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/colorWhite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:text="@string/chat_with"/>
        <TextView
                android:id="@+id/pseudo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:ellipsize="end"
                android:lines="1"
                android:fontFamily="@font/alfa_slab_one"
                tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="168dp"/>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlinedTextField_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/send_btn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inbox_recycler_view" android:layout_marginBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_message"/>

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inbox_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/message_item"
            app:layout_constraintBottom_toTopOf="@+id/outlinedTextField_name"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <Button
            android:id="@+id/send_btn"
            android:text="@string/send"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/background_alert_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/outlinedTextField_name"
            app:layout_constraintStart_toEndOf="@+id/outlinedTextField_name"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toTopOf="@+id/outlinedTextField_name"
            app:backgroundTint="@null" android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" app:elevation="8dp" android:fontFamily="@font/alfa_slab_one"/>


</androidx.constraintlayout.widget.ConstraintLayout>