<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/mapViewFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map_view"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/listViewFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/list_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/workmatesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/workmates"
        app:showAsAction="ifRoom" />
</menu>